--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,33 @@
-p{
+p.sub-title1 {
     color: aqua;  
   }
-  
-  h1{
+p#sub-title2 {
+    color: pink;  
+  }
+.company{
+    font-weight: bold;
+    font-size: larger;
+}
+ h1{
       color: red;
       font-size: 50pt;
       font-weight: bold;
   }
+div.box1{
+    height: 100px;
+    width: 100px;
+    background-color: #4169e1;
+    text-align: center;
+}
+div.box2{
+    height: 100px;
+    width: 100px;
+    background-color: mediumaquamarine;
+    text-align: center;
+}
+div.box3{
+    height: 100px;
+    width: 100px;
+    background-color: yellow;
+    text-align: center;
+}
